2015-06-25  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-255

	* src/absorption.{h,cc}:

	Move definition of SpeciesAuxTypeNames from .h to .cc file. It's only
	used internally. Also fixes warning from GCC about unused variable.

	(SpeciesAuxData::ReadFromStream): Use explicit cast from Index to
	Numeric in nlinspace to avoid compiler warning.

2015-06-24  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-254

	* src/absorption.{cc,h} (SpeciesAuxData):

	Change internal implementation to make it possible to store more
	complex auxiliary data. Each isotopologue can now be associated with
	an ArrayOfGriddedField1. Preparation to store partition functions
	externally.

	* src/xml_io_compound_types.cc:

	Adapt the read/write routines for SpeciesAuxData. Format version
	increased to 2. Old format 1 data can still be read and converted to
	version 2.

	* src/zeeman.cc (set_quantum_numbers, set_part_isotopolouge_constants):

	Adapted for changes in SpeciesAuxData.

	* src/m_zeeman.cc, src/zeeman.{cc,h} (set_part_isotopologue_constants):

	Fix typo in function name.
	
2015-06-23  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-3-253

	* src/m_jacobian.cc
	(jacobianDoitAddSpecies, jacobianDoitClose, jacobianDoit):
	Set and make use of jacobian_indices. Additionally, jacobian_quantities
	now also provides the retrieval/perturbation grids consistently with
	jacobian_quantities in clearsky jacobian case. Avoid clearsky/cloudy
	jacobian conflicts by throwing error if jacobian_do is 1.

	(jacobianOff): Added jacobianDoit_do, also set to 0.

	* src/methods.cc, controlfiles/artscomponents/wfuns/TestDoitJacobians.arts:
	Adapted to changes above.

	* src/workspace.cc, src/check_input.cc,
	controlfiles/instruments/ici/TestICI_fast.arts,
	controlfiles/instruments/amsu/TestAMSU_MetMM_generic.arts, TestAMSU_generic.arts,
	controlfiles/instruments/hirs/TestHIRS.arts,
	controlfiles/instruments/mhs/TestMHS_generic.arts,
	controlfiles/artscomponents/doitbatch/TestDOITBatch.arts,