@@ -445,6 +445,9 @@ public:
         PT_NONE,
         PT_ISOTOPOLOGUE_RATIO,
         PT_ISOTOPOLOGUE_QUANTUM,
+        PT_PARTITIONFUNCTION_TFIELD,
+        PT_PARTITIONFUNCTION_COEFF,
+        PT_PARTITIONFUNCTION_COEFF_VIBROT,
         PT_FINAL_ENTRY
     } AuxType;
 
