@@ -1,3 +1,10 @@
+2015-06-25  Richard Larsson  <ric.larsson@gmail.com>
+
+	* arts-2-3-256
+	
+	* src/absorption.{cc,h}: Added partition function types to enum.
+	No calculations yet.
+
 2015-06-25  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-255
